--- a/tex/identifying-unknown-chemicals.tex
+++ b/tex/identifying-unknown-chemicals.tex
@@ -194,13 +194,7 @@ like ethanoic acid.
 If there is no universal indicator, 
 you can show that something definitely is an acid 
 if it causes methyl orange to turn from orange to red. 
-However, 
-if there is no color change, 
-you might still have a weak acid, 
-so you cannot use methyl orange to eliminate the possibility of an acid. 
-You also cannot use POP to show that there is an acid, 
-as both concentrated acid and tap water have the same effect on POP: 
-none whatsoever.
+However, if there is no color change, you might still have a weak acid, so you cannot use methyl orange to eliminate the possibility of an acid. You also cannot use phenolphthalein (POP) alone to show that there is an acid, as both concentrated acid and tap water have the same effect on POP: none whatsoever. However, you can make up a very dilute solution of a strong base, add phenolphthalein (it should turn pink) and then see if addition of your unknown causes the solution to turn clear again (by neutralizing the base).
 
 If you do not have any litmus paper or other indicator, 
 find another beaker and add 10-20~mL of ordinary water 
@@ -217,7 +211,7 @@ can cause such vigorous effervescence as to eject acid from the test tube.
 \section{Test three: What kind of acid?}
 
 %------------------------------------------------------------------------------
-\subsection{Sulfuric acid}
+\subsection{Concentrated sulfuric acid}
 
 \begin{itemize}
 
@@ -234,14 +228,12 @@ and pour over some sugar in a beaker.
 After some time, 
 a black color from carbon produced 
 from the dehydration of sugar confirms sulfuric acid. 
-Yes, 
-the same thing happens to skin. 
 The downside of this second test is that the beaker 
 is almost impossible to clean.}
 
-\item{Alternative test: Find or prepare a 0.1~M barium nitrate, 
-barium chloride, 
-or lead nitrate solution. 
+\item{Alternative test: Find or prepare a 0.1~M solution of 
+barium nitrate, 
+or barium chloride. 
 In a test tube, 
 add about one centimeter of your diluted sample 
 and then a few drops of one of the above solutions. 
@@ -255,7 +247,8 @@ test in the same way the water you used for the dilution.
 Not much should happen. 
 If your tap water contains sulfates, 
 find some distilled (e.g. 
-rain) water and remake the dilution.}
+rain) water and remake the dilution 
+and then repeat the test.}
 \end{itemize}
 
 %------------------------------------------------------------------------------
@@ -264,7 +257,6 @@ rain) water and remake the dilution.}
 \begin{itemize}
 
 \item{Hints: white fumes, 
-intense acidic smell similar to vinegar, 
 more dense than water}
 
 \item{Confirmatory test: 
@@ -301,7 +293,7 @@ The precipitate confirms that you have hydrochloric acid.
 Note that for this test to be effective, 
 the hydrochloric acid must be diluted. 
 Concentrated hydrochloride acid reacts with aqueous silver 
-to form the [\ce{AgCl2}]-complex, 
+to form the [\ce{AgCl2}]$^-$ complex, 
 which is soluble.}
 
 \end{itemize}
@@ -314,15 +306,18 @@ which is soluble.}
 \item{Confirmatory Test: This acid smells strongly of vinegar. 
 If you have a definite vingar smell, 
 it is probably ethanoic acid, 
-but beware that concentrated HCl can have a similar smell. 
+but beware that concentrated HCl might have a similar smell. 
 To confirm ethanoic acid, 
 use some diluted acid from test one 
-and add a small amount of baking soda until it is just neutralized. 
+and add a small amount of baking soda until it is just neutralized 
+(bubbles stop forming when you mix in baking soda). 
 Do not add excess baking soda - neutralization is the goal. 
 After neutralizing, 
-add a small amount of iron (III) chloride or nitrate. 
-A blood red solution of iron (III) acetate 
-proves that the acid is ethanoic. 
+add a small amount of iron (III) chloride or nitrate solution -- 
+it should be orange or yellow in color. 
+If adding your neutralized solution to the iron (III) solution causes 
+a blood red solution (of iron (III) acetate) to form, 
+your acid is ethanoic/acetic acid. 
 Boiling the solution should form a red brown precipitate. 
 If you do not have iron (III) salts but do have universal indicator, 
 use the indicator method above 
@@ -342,7 +337,7 @@ or match stick and dip it in the concentrated acid.
 If the splinter turns yellow, 
 the acid is nitric. 
 A second confirmatory test is adding copper wire 
-or turnings to the concentrated acid. 
+or turnings to the concentrated acid in a test tube. 
 A brown gas of nitrogen dioxide is formed. 
 Do this confirmatory test in a well ventilated area.}
 
@@ -386,12 +381,21 @@ and find a safe place to store it.
 
 If the chemical is less dense than water 
 and you are familiar with organic solvents, 
-you might try a careful smell test.
+you might try a careful wafting smell test. 
+With your nose about 30~cm (one foot) away from the sample, 
+start sniffing the air. 
+Wave your hand over the sample to direct more fumes in your direction. 
+Slowly approach the sample, 
+sniffing and waving much faster than your rate of approach -- 
+the goal is to avoid a sudden increase in the amount of chemical 
+entering your nose. 
+If you can't smell anything from 10~cm (4 inches) away, 
+end the test.
 
 If the unknown smells like strong booze and is soluble in water, 
 it is probably ethanol or methanol. 
 Do not drink it! -- methanol blinds. 
-If it is bright red, 
+If it smells like ethanol and is bright red, 
 it is probably Sudan III solution, 
 for biology. 
 Label and use it. 
@@ -405,6 +409,7 @@ with some impurities to make it undrinkable.
 Confirm this by showing that paper soaked in the chemical 
 will burn with a blue flame but that paper soaked in a 50/50 
 mixture of the chemical and water will not burn. 
+Use a small scrap of paper, and hold it with tongs. 
 If it is clear and someone at the school can assure 
 that the contents are ethanol and not methanol, 
 label the bottle ``ethanol'' and use it. 
@@ -413,7 +418,12 @@ a poison,
 pour the contents into a large bucket 
 and leave it in a place where no one will disturb it 
 and where the fumes will not accumulate. 
-Let it evaporate.
+Let it evaporate. 
+Ethanol that you know is ethanol is quite useful 
+and methanol that you know is methanol can be helpful. 
+But methanol that might be used in experiments calling for ethanol 
+is dangerous, 
+and the ambiguity is a hazard that you should remove.
 
 If the unknown smells like nail polish remover 
 and is soluble in water, 
@@ -443,7 +453,7 @@ and find a safe place to store it.
 %==============================================================================
 \section{Test five: What else?}
 \label{sec:whatelse}
-If you unknown is not an acid, 
+If your unknown is not an acid, 
 not ammonia, 
 and soluble in water, 
 see what it smells like. 
@@ -468,14 +478,19 @@ Here are some possibilities:
 \item{Hints: cloudy and a jammed stopper, 
 but not always}
 
-\item{Test: red litmus turns blue or POP pink.}
+\item{Test: red litmus turns blue or phenolphalein (POP) pink.}
 
 \item{What to do: sodium hydroxide is cheap when bought as caustic soda. 
 Keep it around just for neutralizing acid wastes. 
-If its presence disturbs you, 
-add some indicator and then cheap acid until neutralization. 
-After complete neutralization, 
-dump.}
+Cloudyness in the solution is possibly calcium or magnesium carbonate. 
+This forms when the water used to make the solution contained calcium or magnesium
+(i.e. was "hard water) 
+and carbon dioxide from the air crept in and reacted with the sodium hydroxide 
+to form sodium carbonate. 
+You can remove the cloudyness by filtration. 
+If you want to use the hydroxide solution for experiments, 
+find a standard acid 
+and use titration to find the concentration of the hydroxide solution.}
 
 \end{itemize}
 
@@ -487,9 +502,11 @@ dump.}
 \item{Hints: colorless liquid, 
 in an opaque or dark bottle}
 
-\item{Test: add a bit of acidified potassium permanganate solution. 
-The potassium permanganate should turn colorless 
-on mixing and bubbles of gas should be observed.}
+\item{Test: add a mixture of dilute potassium permanganate solution 
+and dilute sulfuric acid 
+(this mixture is often called ``acidified potassium permanganage solution''). 
+The pink potassium permanganate should turn colorless 
+on mixing and bubbles of gas (oxygen!) should be observed.}
 
 \item{What to do: label and use. 
 If you want to dispose of it for some reason, 
@@ -507,14 +524,17 @@ pink after significant dilution}
 
 \item{Test: to a very dilute solution, 
 add crushed vitamin C (ascorbic acid) from a pharmacy. 
-The solution should turn colorless.}
+The solution should turn colorless. 
+You can also use lemon or lime juice.}
 
 \item{What to do: test the pH with litmus paper 
 or methyl orange to see if acid has been added. 
 Then label ``(acidified) potassium permanganate'' and use. 
 If you want to dispose of it, 
 add crushed vitamin C until the color disappears 
-and then pour into a pit latrine.}
+and then pour into a pit latrine. 
+If you want to use it for experiments, 
+you can find its concentration through redox titration.}
 
 \end{itemize}
 
@@ -539,7 +559,7 @@ If two layers quickly separate,
 the iodine solution has been prepared without ethanol. 
 If a cloudy mixture (an emulsion) forms, 
 the iodine solution has been prepared with ethanol. 
-Label the solution ``iodine solution (with ethanol)'' and use it.}
+Label the original solution ``iodine solution (with ethanol)'' and use it.}
 
 \end{itemize}
 
@@ -556,6 +576,13 @@ massive brown precipitate confirms potassium ferrocyanide solution.}
 
 \item{What to do: Label and use. 
 Do not dump while it remains useful.}
+
+\item{Note: potassium ferricyanide solution is also common in schools 
+in countries that perform qualitative analysis. 
+It looks similar but should not have the same effect on copper (II) salts, 
+but will produce a deep blue color with iron (II) salts.}
+
+% are ferro and ferri confused here?
 
 \end{itemize}
 
@@ -615,10 +642,17 @@ you almost certainly have either
 sodium hydroxide or potassium hydroxide. 
 Dilute the liquid in at least 10 times its 
 rough volume of water and titrate a sample against 1M acid. 
-Find a plastic water bottle with a screw cap for your dilution and 
+Find a container with a secure top  
 label it ``sodium or potassium hydroxide, 
 $n$~M'', 
-where $n$ is the molarity you measured in your titration.
+where $n$ is the molarity you measured in your titration. 
+Note that hydroxide solutions cannot be stored in PETE/PET (#1) plastic bottles 
+(like the ones generally used for drinking water) 
+because PETE is an ester and hydroxide catalyzes the hydrolysis of esters 
+(i.e. after a few months when you reach for the bottle 
+you will walk away with the top 
+but not the bottom of the container 
+and have a big mess at your feet).
 
 %------------------------------------------------------------------------------
 \subsection{Color}
@@ -719,13 +753,15 @@ over a flame and then burn with a blue flame --
 producing sulfur dioxide, 
 a poisonous gas. 
 Do not heat an unknown yellow compound 
-unless you are fairly sure it is sulfur.}
+unless you are fairly sure it is sulfur, 
+and then only a very small amount.}
 
 \item{Blue compounds are often copper salts. 
 These should have a green flame test.}
 
 \item{Purple crystals or flakes insoluble in water are probably iodine. 
-Iodine will dissolve in kerosene to form a red solution.}
+Iodine will dissolve in kerosene to form a red solution 
+and in mineral oil to form a purple solution.}
 
 \item{One of the few green powders is nickel carbonate.}
 
@@ -751,20 +787,11 @@ if lit in either a Bunsen burner or gas cigarette lighter.
 Hold it with tongs, 
 and do not stare at the light.}
 
-\item{A metal stored under oil is probably sodium or potassium. 
-If you are feeling adventurous, 
-remove a sample and cut off a VERY small piece, 
-perhaps 5~mm on a side. 
-Both metals may be easily cut with a knife. 
-Return the rest to the original container and seal it again. 
-Then, 
-add the piece of metal to an open container of water and stand back. 
-Both react violently and generally send the piece of metal 
-spinning around on a cushion of hydrogen gas. 
-Potassium generally gets hot enough to ignite this gas 
-which then burns with a lilac flame. 
-If the hydrogen under sodium burns, 
-it will be yellow. 
-The water will become a solution of sodium or potassium hydroxide.}
+\item{A solid stored under oil is probably sodium or potassium metal. 
+It also could be phosphorous. It is best to leave such containers alone. 
+The solid is stored under liquid because it reacts with air, 
+and under oil and not water because it reacts violently with the latter. 
+Beware that potassium metal can build up explosive peroxides in the container holding it -- 
+seek expert advice before opening such containers.}
 
 \end{itemize}
