--- a/tex/order-in-the-storeroom.tex
+++ b/tex/order-in-the-storeroom.tex
@@ -1,7 +1,11 @@
-\chapter{Hey Look at this Stuff!}
+\documentclass{report}
+\usepackage{a4wide}
+\setcounter{secnumdepth}{0}
+\begin{document}
+\section{Hey Look at this Stuff!}
 \textit{a brief guide to organizing the laboratory store room}\\
 
-The following is advice for PCVs who arrive at a site with a collection of chemicals and/or apparatus for learning science and find that their community is interested in organizing the collection and putting it to use. We strongly recommend that you follow this process with at least one other teacher at your school. We recommend an organizational process with three steps:
+The following is advice for PCVs who arrive at a site with a collection of chemicals and/or apparatus for learning science and find that their community is interested in organizing the collection to put it to use. We recommend an organizational process with three steps:
 \begin{itemize}
 \item{getting ready}
 \item{the big day}
@@ -9,24 +13,29 @@ The following is advice for PCVs who arrive at a site with a collection of chemi
 \end{itemize}
 
 After the collection has been organized, there are three more steps:
+\begin{itemize}
 \item{establishing regular maintenance}
 \item{expanding the collection}
 \item{using the materials for learning!}
+\end{itemize}
 
-\section{Getting Ready}
+We strongly recommend that you follow this process together with at least one other teacher at your school.
+
+\subsection{Getting Ready}
 
 \begin{enumerate}
 \item{Get permission: before you start a reorganization project, you want to make sure that this is something your school wants to do.}
-\item{Involve others: you want to involve other teachers for four reasons. First, it might be their lab. Second, having extra hands is very helpful. Third, they might know what things are that you can't identify or that are no longer labeled. Finally, the whole point of a school getting PCVs is for them to collaborate with other teachers.}
+\item{Get access: if the storeroom only has one key, offer to make a copy in town. Alternately, offer to get a new (stonger) lock; they usually come with several keys.}
+\item{Involve others: there are at least four reasons to involve other teachers. First, it might be their lab. Second, having extra hands is very helpful. Third, they might know what things are that you can't identify or that are no longer labeled. Finally, the whole point of a school getting PCVs is for them to collaborate with other teachers.}
 \item{Make time: make an estimate for how long the project will take. Then set aside at least twice that much time. Unless your school has very few things, this project is best done on a weekend or during a holiday when you can take all day if you need.}
 \item{Procure materials: get a permanent marker and masking tape or paper and clear packing tape for making labels. Get a washing rag or several that can be permanently dedicated to lab use. Label it as such with the permanent marker. Try to get a rubber blade mop or a similiar tool to let you mop a floor bearing contain chemical residues and glass shards. Get a box of disposable rubber gloves (pharmacy) as well as a bunch of dusts masks if possible. If you do not already have a pair, get some goggles. Get a box of baking soda for neutralizing acid spills. If water is hard to get, plan ahead for having several buckets of water available for this project.}
 \item{Ask questions: is your school required to keep broken apparatus for audits by inspectors? Where is a safe place for disposing of broken glass? What is the current protocol for disposing of chemical waste? If there is no procedure, where is the best place for disposing (treated) chemical waste? This is probably a pit latrine, one that will not be pumped for fertilizer.}
 \item{Make space: Clean and clear a sorting area as close to the storeroom as possible and as large as possible. A classroom is usually a good choice. Do not use a mess hall / dining area.}
 \item{Recruit: If culturally acceptable, retain some truthworthy and reliable students as assistants. Having a small army of hands is extremely helpful for large storeroom projects. Beware that if the store room contains books, in some schools even angelic children will try to steal one or two and this can be a nightmare to undo. You should also watch out for students attempting to perform experiments with the things they discover. While laudable in terms of curousity, for safety reasons you should ask them to hold off until the proper time.}
-\item{Read: the list of <extremely-dangerous-chemicals> and <dangerous-chemicals> to be more familiar with what you might encounter. Also read <laboratory-first-aid> and <spill-clean-up> to be prepared.}
+\item{Read: the list of \textbf{\textless extremely-dangerous-chemicals\textgreater } and \textbf{\textless dangerous-chemicals\textgreater } to be more familiar with what you might encounter. Also read \textbf{\textless laboratory-first-aid\textgreater } and \textbf{\textless spill-clean-up\textgreater } to be prepared.}
 \end{enumerate}
 
-\section{The Big Day}
+\subsection{The Big Day}
 \textit{like a band-aid, better to do it all at once}
 
 Reorganizing a supply room can take anywhere from 5 minutes to 5 days depending on how large a collection is present and what state it is in. This manual recommends doing all of the big work in one go (on one day) and leaving as follow up tasks anything that can be done later. Any number of the follow up tasks can be done on the big day, but there is a set of activities worth doing all at once. The basic idea is to take everything out, sort it, identify future work, clean the storage space, and then put everything back. 
@@ -37,31 +46,66 @@ Reorganizing a supply room can take anywhere from 5 minutes to 5 days depending 
 \item{Move out each item one at a time; use two hands for equipment and carry all glass bottles by the base, not the neck. On the first pass, leave behind anything that is leaking or looks sketchy.}
 \item{As you move items out, sort them. First put all apparatus (equipment) in one place and all chemicals in another.
 \begin{itemize}
-\item{Apparatus: sort the apparatus by type and group similar things together (e.g. all glassware). Make a separate area for broken glassware.}
+\item{Apparatus: sort the apparatus by type and group similar things together (e.g. all glassware). Make a separate area for broken glassware (expect broken burettes, which can often be repaired).}
 \item{Chemicals: for rapid sorting, organize the chemicals alphabetically. If you have assistants and many chemicals, you might chalk off a space for each letter. Note that not all letters should be the same size; in English language areas, chemicals starting with C, P, and S tend to be particularly numerous.}
 \end{itemize}
 }
 \item{As chemicals are removed, locate any chemical spills and circle them with chalk. Do not lose track of what compound has been spilled. Label the spill if you know what it was.}
 \item{As apparatus are removed, look for shards of broken glass and use paper, cardboard, wood, etc to sweep them into a box or other safe receptical.}
-\item{If you remain with some leaking containers of chemicals, do the best you can to transfer the contents of the container into a new clean and dry container. Wear goggles and gloves. Also wear a mask or a cloth over your face to prevent inhaling dust and/or fumes. Label the container before the transfer. If the chemical has a strong smell (e.g. ammonia, glacial acetic acid, diethyl ether), perform the transfer outside where there is better ventillation and stand upwind). If the chemical is on the list of <extremely-dangerous-chemicals> follow the instructions on the list, leave it alone, or ask someone with more experience for advice. If the container is an unlabelled liquid, follow the directions in <identifying-unlabeled-chemicals> before proceeding. This is one reason why this process can take longer than anticipated. Do not pour the contents from a damaged liquid bottle into a partially occupied bottle that claims to be the same thing.}
-\item{Clean all spills by following <spill-clean-up>.}
+\item{If you remain with some leaking containers of chemicals, do the best you can to transfer the contents of the container into a new clean and dry container. Wear goggles and gloves. Also wear a mask or a cloth over your face to prevent inhaling dust and/or fumes. Label the container before the transfer. If the chemical has a strong smell (e.g. ammonia, glacial acetic acid, diethyl ether), perform the transfer outside where there is better ventillation and stand upwind). If the chemical is on the list of \textbf{\textless extremely-dangerous-chemicals\textgreater } follow the instructions on the list, leave it alone, or ask someone with more experience for advice. If the container is an unlabelled liquid, follow the directions in \textbf{\textless identifying-unlabeled-chemicals\textgreater } before proceeding. This is one reason why this process can take longer than anticipated. Do not pour the contents from a damaged liquid bottle into a partially occupied bottle that claims to be the same thing.}
+\item{Clean all spills by following \textbf{\textless spill-clean-up\textgreater }.}
 \item{Clean storeroom shelves (if present) with a damp/wet rag that can only be used for this purpose and wear gloves. Mop the floow to flush out remaining debris. Do not dust the shelves or sweet the floor -- the last place you want chemical dust is in the air.}
 \item{While the storeroom dries, look through the chemicals. In addition to making sure that they are correctly alphabetized, look for and address the following:
 \begin{itemize}
 \item{Empty chemical containers. Set these aside to be thoroughly cleaned. Clean them on the big day only if you have extra time/labor or if you need them for storing another chemical.}
-\item{Cracked caps or otherwise damaged containers. If possible, , bottles with  - deposition (often white) on tops of bottles --> check the container for cracks, use a rag in a gloved hand to wipe up deposition
-\item{For liquid chemicals needing a new home, be wary of pouring a chemical into a container of another chemical with the same name. If one bottle is mislabeled (perhaps it was refilled with something else), the result could be catastrophic. If you feel that you must combine reagents, first use the instructions for <identifying-unknown-chemicals> to confirm that the chemicals are indeed the same and then try mixing a small amount from each bottle in another container to confirm that nothing violent occurs. Then, if you do add one to the other, add it very slowly. But again, the best plan is to find a new container, ideally of the same material as the original container.}
-\item{Containers of solid reagents that sounds like they are full of water (they slosh). See <salvaging-deliquescent-salts> for more advice.}
-\item{Any of the chemicals on the list of <extremely-dangerous-chemicals>. Move these chemicals away from the others. They should not be filed in the main collection for regular use, but placed somewhere secure where there whereabouts is known but where they will not be used. This could be a specially labeled corner of the storeroom.}
-\item{Fading or peeling labels. Make a new label right away. Be sure to include the chemical name and exact formula. For bottles of acids, also include the specific gravity (SG) or density (a number between 1 and 2), the \% purity, and the molecular mass.}
+\item{Cracked caps or otherwise damaged containers. If possible, transfer the contents to a clean and dry bottle. For bottles with deposition (often white) on tops of bottles, check the container for cracks and then use a damp (not wet) rag in a gloved hand to wipe up the deposition.}
+\item{Containers of solid reagents that sounds like they are full of water (they slosh). See \textbf{\textless salvaging-deliquescent-salts\textgreater } for more advice.}
+\item{Any of the chemicals on the list of \textbf{\textless extremely-dangerous-chemicals\textgreater }. Move these chemicals away from the others. They should not be filed in the main collection for regular use, but placed somewhere secure where there whereabouts is known but where they will not be used. This could be a specially labeled corner of the storeroom.}
+\item{Fading or peeling labels. Make a new label right away. Be sure to include the chemical name and exact formula. For bottles of acids, also include the specific gravity (SG) or density (a number between 1 and 2), the \% purity, and the molecular mass. For solids in plastic containers, consider also labeling the plastic directly with a permanent marker. If you need to relabel the container in the future, know that alcohol and/or acetone can probably be used to remove the ``permanent'' ink.}
 \item{Unlabled containers. Group these in a special place for a follow-up project. If you have a hunch based on where the chemical was found, make a lable that shares both your guess and your doubt, e.g. ``unknown, may be copper (II) chloride.''}
 \end{itemize}
 }
-\item{}
+\item{Look over all of the stuff you have gathered and then return to the storeroom. Make a plan for how you will organize the stuff in the storeroom space. Then start brining things back into the room.}
+\item{For storing chemicals:
+\begin{itemize}
+\item{Pick an easy-to-follow organization scheme and label the storage area very clearly. The easiest scheme to implement is alphabetical and we recommend this for most schools. This has some downsides because it potentially puts mutually reactive chemicals near each other. A better scheme would divide chemicals into categories by type; this would keep acids and bases away from each other, as well as oxidizing agents and reducing agents. In practice, however, solids in closed containers tent not to leap out at each other; a scheme that is easy to follow is much better than a technically superior scheme that no one obeys.}
+\item{Glass bottles of liquid chemicals should be kept on the floor, unless the laboratory is prone to flooding, in which case they should be on a sufficiently elevated, broad and stable surface. What you do not want are these bottles falling and breaking open.}
+\item{Million's Reagent, benzene, and other \textbf{\textless extremely-dangerous-chemicals \textgreater} that should never be used should be kept in a special place, ideally locked away, and labelled to prevent use.}
+
+\end{itemize}
+}
+\item{For storing apparatus: 
+\begin{itemize}
+\item{Arrange apparatus neatly so it is easy to find each piece.}
+\item{Put similar things together.}
+\item{Beakers can be nested like Russian dolls.}
+\end{itemize}
+}
+\item{Put broken glassware in a special and safe place. Do not use it.}
 \end{enumerate}
 
-\section{Follow Up Tasks}
+\subsection{Follow Up Tasks}
 
-NaOH / KOH --> dilute ~10x, test with titration
-	- FeCl3 --> dilute ~2x, transfer to a suitable container
- - empty containers --> wash and reuse
+The following tasks can be performed on the big day if you have ample time and hands; otherwise they can be performed in follow up sessions.
+
+\begin{itemize}
+\item{Wash all dirty glassware. Set stuborn residues aside and tend to them later with the procedures described in \textbf{\textless removing-residues\textgreater }.}
+\item{Test all burettes. They should allow solution to pass when open, and prevent it from passing when closed. Label all non-functional burettes as non-functional. When you have time, follow the instructions for \textbf{\textless burette-repair\textgreater }.}
+\item{Test and repair voltmeters, ammeters, and ohmeters according to the instructions for \textbf{\textless meter-repair\textgreater }.}
+\item{Once you have labelled and organized everything in a lab, draw a map. Sketch the layout of your storeroom / laboratory / classroom and label the benches and shelves. Then, in a ledger or notebook, 
+write down what you have and the quantity. For example, Bench 6 contains 20 test tubes, 3 test tube holders, and 4 aluminum pots. This way, when you need something specific, you can find it easily. Further, 
+this helps all teachers -- especially new ones -- to better use the lab. Finally, having a continuously updated inventory will let you know what materials need to be replaced or are in short supply. Proper inventories are a critical part of maintaining a laboratory, and they really simplify things when you want to do an experiment with many students.}
+\item{Odds are, you will wish that you had more storage space, especially if you plan to get more stuff. Think about how to build more shelves. Make sure they are stable adn secure. You might use this opportunity as an excuse to befriend the local carpenter.}
+\item{Identify the name and purpose of any apparatus with which you are not familiar. For a list of common items, see \textbf{\textless common-apparatus \textgreater}. For more unusual items, ask around the school and then sit down with another teacher to find the answer on the internet.}
+\item{Identify some of the unlabeled chemicals with the instructions for \textbf{\textless identifying-unknown-chemicals \textgreater}. Unknown chemicals pose a hazard, because it is unclear how to properly store them or how to clean up spills. If a chemical is unknown, there is no safe way to dispose of it. Therefore, it is best to attempt to identify it. That said, some chemicals are really hard to identify; you might have to keep a small collection in the corner of true unknowns.}
+\end{itemize}
+
+\subsection{Now what?}
+
+Now that the storeroom / laboratory is ordered and you have a list of everything in it, compare this list to the \textbf{\textless basic-lab-materials\textgreater } list in the next chapter. See what you else you might want to procure and make plans for doing so.
+
+You should also develop a system for keeping the space neat and organized. Make sure students and other teachers are involved. Consider the advice in \textbf{\textless rountine-cleaning \textgreater}.
+
+In the meanwhile, start experimenting with what you have! See \textbf{\textless part-2\textgreater } for suggestions for activites you can do yourself or with other teachers. We strongly recommend that you master activities on your own before bringing them to students.
+
+\end{document}
