added starting-a-lab, beginning reorganization for PC global

--- a/shika-int.tex
+++ b/shika-int.tex
@@ -46,9 +46,9 @@
 
 % Some front matter...
 \input{./tex/about-this-book.tex}
-\input{./tex/teaching-philosophy.tex}
 
 % Now a table of contents:
+\setcounter{tocdepth}{1}
 \tableofcontents
 
 % ...but we do not want a page number to appear on the table of contents
@@ -58,30 +58,26 @@
 
 % Part 1 - Lab Development
 \input{./tex/part1.tex} % This is a page dedicated to annoucing Part 1
-\input{./tex/starting-school-labs.tex}
+\input{./tex/teaching-philosophy.tex}
+\input{./tex/starting-a-lab.tex}
+\input{./tex/order-in-the-storeroom.tex}
 \input{./tex/technical-lab-needs.tex}
-\input{./tex/sources-of-equipment.tex}
-\input{./tex/sources-of-chemicals.tex}
-\input{./tex/improving-existing-labs.tex}
-\input{./tex/testing-voltmeters.tex}
-\input{./tex/burette-repair.tex}
-\input{./tex/identifying-unknown-chemicals.tex}
-\input{./tex/qualitative-analysis.tex}
+%\input{./tex/improving-existing-labs.tex}
 
-% Part 2 - Lab Management
+% Part 2 - Biology Activities
 \input{./tex/part2.tex}
-\input{./tex/laboratory-safety.tex}
-\input{./tex/dangerous-chemicals.tex}
-\input{./tex/dangerous-techniques.tex}
-\input{./tex/lab-classroom-management.tex}
-\input{./tex/routine-upkeep.tex}
-\input{./tex/waste-disposal.tex}
-\input{./tex/recycling-silver-nitrate.tex}
-\input{./tex/recycling-organic-waste.tex}
-\input{./tex/industrial-ecology.tex}
 
-% Part 3 - Lab Techniques
+\input{./tex/preservation-of-specimens.tex}
+\input{./tex/dissection.tex}
+\input{./tex/culture-media.tex}
+\input{./tex/using-a-microscope.tex}
+\input{./tex/low-power-microscopy.tex}
+
+\input{./tex/biology-activities.tex}
+
+% Part 3 - Chemistry Activities
 \input{./tex/part3.tex}
+
 \input{./tex/using-a-beam-balance.tex}
 \input{./tex/using-a-plastic-syringe.tex}
 \input{./tex/measures-of-concentration.tex}
@@ -93,18 +89,34 @@
 \input{./tex/volumetric-analysis-without-burettes.tex}
 \input{./tex/relative-standardization.tex}
 \input{./tex/preparation-of-solutions-without-balance.tex}
-\input{./tex/substituting-chemicals.tex}
-\input{./tex/preservation-of-specimens.tex}
-\input{./tex/dissection.tex}
-\input{./tex/culture-media.tex}
-\input{./tex/using-a-microscope.tex}
-\input{./tex/low-power-microscopy.tex}
 
-% Part 4 - Hands-On Activities
-\input{./tex/part4.tex}
-\input{./tex/biology-activities.tex}
 \input{./tex/chemistry-activities.tex}
+
+% Part 4 - Physics Activities
+\input{./tex/part4.tex}
 \input{./tex/physics-activities.tex}
+
+% Part 5 - Earth Science Activities
+\input{./tex/part5.tex}
+
+% Part 6 - Lab Techniques
+\input{./tex/part6.tex}
+\input{./tex/testing-voltmeters.tex}
+\input{./tex/burette-repair.tex}
+\input{./tex/substituting-chemicals.tex}
+\input{./tex/laboratory-safety.tex}
+\input{./tex/dangerous-chemicals.tex}
+\input{./tex/dangerous-techniques.tex}
+\input{./tex/lab-classroom-management.tex}
+\input{./tex/routine-upkeep.tex}
+\input{./tex/waste-disposal.tex}
+\input{./tex/recycling-silver-nitrate.tex}
+\input{./tex/recycling-organic-waste.tex}
+\input{./tex/industrial-ecology.tex}
+\input{./tex/identifying-unknown-chemicals.tex}
+\input{./tex/qualitative-analysis.tex}
+\input{./tex/sources-of-equipment.tex}
+\input{./tex/sources-of-chemicals.tex}
 
 % That's it!
 \end{document}
