--- a/tex/calculating-bottle-molarity.tex
+++ b/tex/calculating-bottle-molarity.tex
@@ -1,4 +1,5 @@
 \chapter{Calculating the Molarity of Bottled Liquids}
+\label{cha:bottlemolarity}
 
 You need three pieces of information to perform this calculation:
 
