--- a/tex/dangerous-chemicals.tex
+++ b/tex/dangerous-chemicals.tex
@@ -2,7 +2,7 @@
 \label{cha:dangerchem}
 %==============================================================================
 \section{Chemicals that should never be used in a school}
-
+\label{cha:extdangerchem}
 %------------------------------------------------------------------------------
 \subsection{Mercury and its compounds 
 (e.g. Million's Reagent, Nestler's Reagent)}
@@ -147,6 +147,7 @@ listed with tetrachloromethane.
 
 %==============================================================================
 \section{Dangerous chemicals that you might need to use}
+\label{cha:dangerchem}
 
 %------------------------------------------------------------------------------
 \subsection{Ammonia (ammonium hydroxide solution)}
