--- a/tex/identifying-unknown-chemicals.tex
+++ b/tex/identifying-unknown-chemicals.tex
@@ -646,7 +646,7 @@ Find a container with a secure top
 label it ``sodium or potassium hydroxide, 
 $n$~M'', 
 where $n$ is the molarity you measured in your titration. 
-Note that hydroxide solutions cannot be stored in PETE/PET (#1) plastic bottles 
+Note that hydroxide solutions cannot be stored in PETE/PET (\#1) plastic bottles 
 (like the ones generally used for drinking water) 
 because PETE is an ester and hydroxide catalyzes the hydrolysis of esters 
 (i.e. after a few months when you reach for the bottle 
