--- a/tex/teaching-philosophy.tex
+++ b/tex/teaching-philosophy.tex
@@ -5,7 +5,7 @@ To learn science, students must interact with the world around them.
 They must ask their own questions and seek their own answers. 
 They must see things and they must grasp them in their hands; 
 hence the name of this book: 
-\textit{shika na mikono} is Swahili 
+\textit{shika kwa mikono} is Swahili 
 for ``grasping in hands.''
 
 It is our fervent belief that every student in the world 
@@ -165,4 +165,4 @@ Let us gather the world around us and
 put it in the hands of our students, 
 so they might understand how it works. 
 Let us let them grasp it in their hands -- 
-\textit{walishike na mikono yao.}
+\textit{walishike kwa mikono yao.}
