--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,10 +1,10 @@
 \begin{titlepage}
 % title section
 \begin{center}
-	\textsc{{\Huge Shika na Mikono}}\\[0.4cm]
-	\textbf{{\huge Version 3.0}}\\[1.5cm]
+	\textsc{{\Huge Shika kwa Mikono}}\\[0.4cm]
+	\textbf{{\Large Version 3.5}}\\[1.5cm]
 	\HRule\\[0.4cm]
-	\textsc{{\Large Hands-On Science Resource Manual}}\\[0.4cm]
+	\textsc{{\Large A Peace Corps Guide to Hands-On Science}}\\[0.4cm]
 	\HRule\\[0.5cm]
 \end{center}
 
