--- a/tex/about-this-book.tex
+++ b/tex/about-this-book.tex
@@ -1,7 +1,9 @@
-\chapter{About This Book}
+\textbf{\huge{About This Book}}\\[12pt]
+
+Shika kwa Mikono was first written as a training manual for U.S. Peace Corps Volunteers serving in Tanzania. Many of these Volunteers work in schools without laboratories and all are new to the details of the Tanzanian syllabus. This manual was prepared to help them teach science more effectively. Recently, this manual has been revised and expanded for a more international audience; turns out that the challenges PCVs faced in Tanzania were similar to those in many countries. Below is the original preface to the Fall 2011 Tanzanian version.\\[12pt]
 
 Just before the rains returned at the end of 2009, 
-Peace Corps Tanzania recruited Leigh Carroll and me 
+Peace Corps Tanzania recruited Leigh Carroll and I 
 to conduct a training on laboratory methods 
 for the new cohort of education Volunteers. 
 We decided to write a hand-out for our presentation, 
@@ -9,7 +11,7 @@ summarizing ``everything that Volunteers needed to know about the lab.''
 We quickly realized that this was a much larger undertaking 
 than we could manage on our own 
 and began recruiting other Peace Corps Volunteers. 
-Thus the Shika na Mikono project was born.
+Thus the \textit{Shika kwa Mikono} project was born.
 
 As the first edition came together, several themes emerged. 
 We believe that hands-on activities are essential for learning science. 
@@ -20,46 +22,19 @@ it must be safe.
 These three ideas -- interactive learning, equity, and safety -- 
 remain the core of the Shika vision.
 
-The first Shika na Mikono spread far beyond 
-its original use in Peace Corps. 
-Within six months of its publication, 
-copies were used in several teacher trainings in Tanzania, 
-hundreds of additional copies were locally printed in various regions, 
-and the book was presented to the Tanzanian Minister of Education. 
-Shika na Mikono became a project, a set of values, 
-and a solid cadre of Peace Corps Volunteers 
-joined in furthering these ideas in the field. 
-Peace Corps gave me a third year extension to 
-coordinate this work and to train both Peace Corps Volunteers 
-and Tanzanians in these methods.
-
 Given the enthusiastic response to the first edition 
 and the significant work the project had done in the past year, 
 we decided to produce a second edition, 
-this one for the 2010 Peace Corps pre-service training. 
+this one for the 2010 Peace Corps Pre-Service Training. 
 Once again, many people contributed to this effort, 
 most especially PCVs Michael Rush, Kristen Grauer-Gray, and Peter McDonough 
 -- without their excellent ideas and passionate hard work, 
 this book would not exist.
 
-The revised edition proved even more popular, 
-and we began receiving requests for information 
-from other Peace Corps posts, beyond Tanzania. 
-Much of the value of the Tanzanian version of this book 
-is its specificity -- 
-chemicals sourced to an address in the capital, 
-Swahili vocabulary for specific items and actions, 
-explicit instructions for performing practical exercises 
-for the national examinations. 
-Nevertheless, we thought that some of the general information 
-in the text would be of use abroad, 
-and have prepared this version -- 
-the first ``internationalized'' edition of Shika na Mikono. 
-Our hope is that this book will equip teachers in other countries 
-with some core ideas and inspire them to make 
-a book of specific utility to their environment. 
+This is now the third edition of Shika na Mikono for Tanzania.
 PCVs Jessi Bond, Carolyn Rhodebeck, and Dylan Masters 
-created additional content for this version. 
+created additional content for this version. Peter McDonough 
+added additional content and also made substantial additions and revisions. 
 PCV Dave Berg provided the inspiration, instruction, 
 and much of the labor to import this version into \LaTeX.
 
@@ -74,8 +49,8 @@ that has been incorporated wholesale
 into the Hands-On Activities section of this book. 
 My own knowledge of the laboratory was greatly increased 
 by a brilliant if ancient book found on the shelves of Bihawana Secondary -- 
-the cover and title pages with the title have long sense been lost, 
-but the preface sites G.P.Rendle, M.D.W. Vokins and P.M.H. Davis as authors, 
+the cover and title pages with the title have long since been lost, 
+but the preface cites G.P.Rendle, M.D.W. Vokins and P.M.H. Davis as authors, 
 and 1967 as the date of publication.
 
 We are all grateful to our schools 
@@ -87,7 +62,7 @@ and creativity of many other teachers,
 both in this country and in America. 
 Many of us working without reliable electricity 
 or internet connections benefited enormously 
-from the hospitality of the numerous expatriate families 
+from the hospitality of the numerous families 
 who sheltered us in town. 
 We are all grateful to Peace Corps Tanzania for supporting our work, 
 especially James Ogondiek and the now retired and much beloved Thomas Msuka, 
@@ -98,5 +73,5 @@ and spread the ideas in this book.
 Most of all, we are grateful to our students, 
 for it is their curiosity and enthusiasm that has motivated everything.\\[24pt]
 Aron Walker\\
-Bihawana Secondary, Dodoma\\
+Klerruu Teachers' College, Iringa\\
 aronwalk@alum.mit.edu
