relabeled appendices, commented out earth science b/c no content

--- a/shika-int.tex
+++ b/shika-int.tex
@@ -97,19 +97,19 @@
 \input{./tex/physics-activities.tex}
 
 % Part 5 - Earth Science Activities
-\input{./tex/part5.tex}
+%\input{./tex/part5.tex}
 
-% Part 6 - Lab Techniques
+% Part 6 - Appendices
 \input{./tex/part6.tex}
-\input{./tex/testing-voltmeters.tex}
-\input{./tex/burette-repair.tex}
-\input{./tex/substituting-chemicals.tex}
 \input{./tex/laboratory-safety.tex}
 \input{./tex/dangerous-chemicals.tex}
 \input{./tex/dangerous-techniques.tex}
 \input{./tex/lab-classroom-management.tex}
 \input{./tex/routine-upkeep.tex}
 \input{./tex/waste-disposal.tex}
+\input{./tex/testing-voltmeters.tex}
+\input{./tex/burette-repair.tex}
+\input{./tex/substituting-chemicals.tex}
 \input{./tex/recycling-silver-nitrate.tex}
 \input{./tex/recycling-organic-waste.tex}
 \input{./tex/industrial-ecology.tex}
